[resolves #7918] Demonstrate using CXF client producer